erDiagram
EMPLOYEES_DATASET ||--o{ PREDICTION_REQUESTS : employee_id
PREDICTION_REQUESTS ||--|| PREDICTION_RESPONSES : request_id


EMPLOYEES_DATASET {
    int id_employee PK
    int age
    string genre
    numeric revenu_mensuel
    string statut_marital
    string departement
    string poste
    int nombre_heures_travailless
    int annees_dans_l_entreprise
    int satisfaction_employee_environnement
    int note_evaluation_actuelle
    string heure_supplementaires
    int attrition_bin
}

PREDICTION_REQUESTS {
    bigint request_id PK
    timestamp created_at
    string source
    int employee_id FK
    jsonb input_payload
}

PREDICTION_RESPONSES {
    bigint response_id PK
    bigint request_id FK
    timestamp created_at
    int prediction
    string prediction_label
    numeric probability_leave
    string model_name
    string model_version
    jsonb output_payload
}

